<resources>
    <string name="app_name">Bluetooth</string>
    <string name="on">on</string>
    <string name="off">Off</string>
    <string name="ToggleButton">ToggleButton</string>
    <string name="listaDispositivosEmparelhados">Lista de dispositivos emparelhados</string>
    <string name="listar">Listar</string>
    <string name="procuraNovosDispositivos">Procura de novos dispositivos</string>
    <string name="procurar">Procurar</string>
    <string name="estado">Estado</string>
</resources>
